--- a/README
+++ b/README
@@ -1,6 +1,38 @@
 NAME
     Email::Address::List - RFC close address list parsing
 
+SYNOPSIS
+        use Email::Address::List;
+
+        my $header = <<'END';
+        Foo Bar <simple@example.com>, (an obsolete comment),,,
+         a group:
+          a . wierd . address @
+          for-real .biz
+         ; invalid thingy, <
+         more@example.com
+         >
+        END
+
+        my @list = Email::Address::List->parse($header);
+        foreach my $e ( @list ) {
+            if ($e->{'type'} eq 'mailbox') {
+                print "an address: ", $e->{'value'}->format ,"\n";
+            }
+            else {
+                print $e->{'type'}, "\n"
+            }
+        }
+
+        # prints:
+        # an address: "Foo Bar" <simple@example.com>
+        # comment
+        # group start
+        # an address: a.wierd.address@forreal.biz
+        # group end
+        # unknown
+        # an address: more@example.com
+
 DESCRIPTION
     Parser for From, To, Cc, Bcc, Reply-To, Sender and previous prefixed
     with Resent- (eg Resent-From) headers.
@@ -10,13 +42,15 @@ REASONING
     mentioned headers and this module is derived work from Email::Address.
 
     However, mentioned headers are structured and contain lists of
-    addresses. Most of the time you want to parse it from start to end
-    keeping every bit even if it's a invalid input.
+    addresses. Most of the time you want to parse such field from start to
+    end keeping everything even if it's an invalid input.
 
 METHODS
   parse
     A class method that takes a header value (w/o name and :) and a set of
-    named options. See below.
+    named options, for example:
+
+        my @list = Email::Address::List->parse( $line, option => 1 );
 
     Returns list of hashes. Each hash at least has 'type' key that describes
     the entry. Types:
@@ -83,4 +117,10 @@ METHODS
     skip_unknown
         Skip anything that is not recognizable. It still tries to recover as
         described earlier.
+
+AUTHOR
+    Ruslan Zakirov <ruz@bestpractical.com>
+
+LICENSE
+    Under the same terms as Perl itself.
 
