--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.03 2013-01-22
+
+ - Include documentation updates present in the released version of
+   0.01, but never checked into the repository
+
 0.02 2014-01-15
 
  - Prevent a quadratic-time check when the provided string did not
